--- a/index.html
+++ b/index.html
@@ -458,7 +458,8 @@
             };
 
             try {
-                const apiKey = ""; 
+                // INSERÇÃO DA CHAVE DE API
+                const apiKey = "AIzaSyBSwG0EMH7kvf7DLo4j280wb42uaWmp_ZA"; 
                 const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=${apiKey}`;
                 
                 const payload = {
@@ -571,4 +572,3 @@
     </script>
 </body>
 </html>
-
