--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
     <div class="container mx-auto p-4 md:p-8 max-w-7xl">
         <header id="main-header" class="text-center mb-8">
             <h1 class="text-3xl md:text-4xl font-bold text-gray-900">MISSIONARY MEDICAL CARE ⚕️</h1>
-            <p class="text-md text-gray-600 mt-2">Uma ferramenta de apoio para o análise de exames, baseada em IA e em suas referências.</p>
+            <!-- Frase alterada para espanhol -->
+            <p class="text-md text-gray-600 mt-2">Una herramienta de apoyo para el análisis de exámenes, basada en IA y en sus referencias.</p>
         </header>
 
         <main>
@@ -95,7 +96,7 @@
                         <!-- Columna 1: Hematología -->
                         <div class="space-y-6 bg-red-50 p-4 rounded-lg border border-red-200">
                             <div>
-                                <h3 class="text-lg font-semibold mb-3 text-red-700">Serie Roja</h3> <!-- Changed to text-red-700 -->
+                                <h3 class="text-lg font-semibold mb-3 text-red-700">Serie Roja</h3>
                                 <div class="space-y-3">
                                     <div><label for="hemoglobina" class="text-sm font-medium text-gray-700">Hemoglobina (g/dL)</label><input type="text" id="hemoglobina" class="mt-1 w-full rounded-md border-gray-300 shadow-sm p-2 text-sm focus:ring-red-500 focus:border-red-500" placeholder="12-18"></div>
                                     <div><label for="hematocrito" class="text-sm font-medium text-gray-700">Hematocrito (%)</label><input type="text" id="hematocrito" class="mt-1 w-full rounded-md border-gray-300 shadow-sm p-2 text-sm focus:ring-red-500 focus:border-red-500" placeholder="36-50"></div>
@@ -109,7 +110,7 @@
                         <!-- Columna 2: Serie Blanca & Coagulación -->
                         <div class="space-y-6 bg-blue-50 p-4 rounded-lg border border-blue-200">
                             <div>
-                                <h3 class="text-lg font-semibold mb-3 text-red-700">Serie Blanca</h3> <!-- Changed to text-red-700 -->
+                                <h3 class="text-lg font-semibold mb-3 text-red-700">Serie Blanca</h3>
                                  <div class="space-y-3">
                                     <div><label for="leucocitos" class="text-sm font-medium text-gray-700">Leucocitos (/mm³)</label><input type="text" id="leucocitos" class="mt-1 w-full rounded-md border-gray-300 shadow-sm p-2 text-sm focus:ring-red-500 focus:border-red-500" placeholder="4.000-11.000"></div>
                                     <div><label for="neutrofilos" class="text-sm font-medium text-gray-700">Neutrófilos (%)</label><input type="text" id="neutrofilos" class="mt-1 w-full rounded-md border-gray-300 shadow-sm p-2 text-sm focus:ring-red-500 focus:border-red-500" placeholder="45-75"></div>
@@ -124,7 +125,7 @@
                         <!-- Columna 3: Química -->
                         <div class="space-y-6 bg-yellow-50 p-4 rounded-lg border border-yellow-200">
                             <div>
-                                <h3 class="text-lg font-semibold mb-3 text-red-700">Química y Coagulación</h3> <!-- Changed to text-red-700 -->
+                                <h3 class="text-lg font-semibold mb-3 text-red-700">Química y Coagulación</h3>
                                 <div class="space-y-3">
                                     <div><label for="glicose" class="text-sm font-medium text-gray-700">Glucemia (mg/dL)</label><input type="text" id="glicose" class="mt-1 w-full rounded-md border-gray-300 shadow-sm p-2 text-sm focus:ring-red-500 focus:border-red-500" placeholder="70-125"></div>
                                     <div><label for="creatinina" class="text-sm font-medium text-gray-700">Creatinina (mg/dL)</label><input type="text" id="creatinina" class="mt-1 w-full rounded-md border-gray-300 shadow-sm p-2 text-sm focus:ring-red-500 focus:border-red-500" placeholder="0.6-1.4"></div>
@@ -138,7 +139,7 @@
                         <!-- Columna 4: Enfermedades Regionales -->
                         <div class="space-y-6 bg-purple-50 p-4 rounded-lg border border-purple-200">
                             <div>
-                                <h3 class="text-lg font-semibold mb-3 text-red-700">Enf. Regionales</h3> <!-- Removed "(Bolivia)" and changed to text-red-700 -->
+                                <h3 class="text-lg font-semibold mb-3 text-red-700">Enf. Regionales</h3>
                                 <div class="bg-slate-50 p-4 rounded-lg space-y-4 border border-slate-200">
                                     <div>
                                         <h4 class="font-semibold text-gray-800">Chagas</h4>
@@ -165,7 +166,7 @@
                         <!-- Columna 5: Gasometria -->
                         <div class="space-y-6 bg-green-50 p-4 rounded-lg border border-green-200">
                             <div>
-                                <h3 class="text-lg font-semibold mb-3 text-red-700">Gasometria</h3> <!-- Changed to text-red-700 -->
+                                <h3 class="text-lg font-semibold mb-3 text-red-700">Gasometria</h3>
                                 <div class="space-y-3">
                                     <div><label for="gasometria_ph" class="text-sm font-medium text-gray-700">pH</label><input type="text" id="gasometria_ph" class="mt-1 w-full rounded-md border-gray-300 shadow-sm p-2 text-sm focus:ring-red-500 focus:border-red-500" placeholder="7.35-7.45"></div>
                                     <div><label for="gasometria_pco2" class="text-sm font-medium text-gray-700">pCO₂ (mmHg)</label><input type="text" id="gasometria_pco2" class="mt-1 w-full rounded-md border-gray-300 shadow-sm p-2 text-sm focus:ring-red-500 focus:border-red-500" placeholder="35-45"></div>
@@ -178,7 +179,7 @@
                         <!-- Columna 6: Perfil Hepático -->
                         <div class="space-y-6 bg-orange-50 p-4 rounded-lg border border-orange-200">
                             <div>
-                                <h3 class="text-lg font-semibold mb-3 text-red-700">Perfil Hepático</h3> <!-- Changed to text-red-700 -->
+                                <h3 class="text-lg font-semibold mb-3 text-red-700">Perfil Hepático</h3>
                                 <div class="space-y-3">
                                     <div><label for="bilirrubina_direta" class="text-sm font-medium text-gray-700">Bilirrubina Direta (mg/dL)</label><input type="text" id="bilirrubina_direta" class="mt-1 w-full rounded-md border-gray-300 shadow-sm p-2 text-sm focus:ring-red-500 focus:border-red-500" placeholder="até 0.4"></div>
                                     <div><label for="bilirrubina_indireta" class="text-sm font-medium text-gray-700">Bilirrubina Indireta (mg/dL)</label><input type="text" id="bilirrubina_indireta" class="mt-1 w-full rounded-md border-gray-300 shadow-sm p-2 text-sm focus:ring-red-500 focus:border-red-500" placeholder="até 1.0"></div>
@@ -191,7 +192,7 @@
                         <!-- Columna 7: Eletrólitos -->
                         <div class="space-y-6 bg-pink-50 p-4 rounded-lg border border-pink-200">
                             <div>
-                                <h3 class="text-lg font-semibold mb-3 text-red-700">Eletrólitos</h3> <!-- Changed to text-red-700 -->
+                                <h3 class="text-lg font-semibold mb-3 text-red-700">Electrolitos</h3>
                                 <div class="space-y-3">
                                     <div><label for="eletrolitos_na" class="text-sm font-medium text-gray-700">Na+ (mEq/L)</label><input type="text" id="eletrolitos_na" class="mt-1 w-full rounded-md border-gray-300 shadow-sm p-2 text-sm focus:ring-red-500 focus:border-red-500" placeholder="135-145"></div>
                                     <div><label for="eletrolitos_k" class="text-sm font-medium text-gray-700">K+ (mEq/L)</label><input type="text" id="eletrolitos_k" class="mt-1 w-full rounded-md border-gray-300 shadow-sm p-2 text-sm focus:ring-red-500 focus:border-red-500" placeholder="3.5-5.0"></div>
@@ -216,9 +217,9 @@
                             Imprimir Reporte
                         </button>
                         <button type="button" id="whatsapp-share-btn" class="w-full md:w-auto bg-green-500 hover:bg-green-600 text-white font-bold py-2.5 px-6 rounded-lg shadow-md transition-all duration-300 focus:outline-none focus:ring-4 focus:ring-green-300" style="display: none;">
-                            Compartir no WhatsApp
+                            Compartir en WhatsApp
                         </button>
-                           <button type="button" id="install-app-btn" class="w-full md:w-auto bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2.5 px-6 rounded-lg shadow-md transition-all duration-300 focus:outline-none focus:ring-4 focus:ring-indigo-300" style="display: none;">
+                            <button type="button" id="install-app-btn" class="w-full md:w-auto bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2.5 px-6 rounded-lg shadow-md transition-all duration-300 focus:outline-none focus:ring-4 focus:ring-indigo-300" style="display: none;">
                             Instalar App
                         </button>
                         <button type="button" id="clear-form-btn" class="w-full md:w-auto bg-white hover:bg-gray-100 text-gray-700 font-bold py-2.5 px-6 rounded-lg shadow-md border border-gray-300 transition-all duration-300 focus:outline-none focus:ring-4 focus:ring-gray-200">
@@ -256,7 +257,7 @@
                     <h2 class="text-xl font-bold text-gray-900 mb-4">Tabla Resumen</h2>
                     <div class="overflow-x-auto">
                         <table class="min-w-full">
-                            <thead class="bg-red-600"> <!-- Changed from teal-600 to red-600 -->
+                            <thead class="bg-red-600">
                                 <tr>
                                     <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider">Parámetro</th>
                                     <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider">Valor</th>
@@ -294,10 +295,11 @@
         </main>
 
         <footer id="main-footer" class="text-center mt-12 text-sm text-gray-500">
-            <p>Desenvolvido como uma ferramenta de apoio para profissionais em missão.</p>
-            <p>&copy; 2024. Todos os derechos reservados.</p>
+            <p>Desarrollado como una herramienta de apoyo para profesionales en misión.</p>
+            <p>&copy; 2024. Todos los derechos reservados.</p>
+            <!-- Disclaimer alterado para espanhol -->
             <p class="mt-4 text-xs text-red-700">
-                As informações neste aplicativo não têm a intenção de ser aconselhamento profissional nem têm a intenção de substituir uma consulta pessoal com um médico, farmacêutico ou outro profissional de saúde qualificado. O leitor não deve desconsiderar aconselhamento médico nem adiar a busca por aconselhamento médico devido a alguma informação encontrada neste aplicativo.
+                La información en esta aplicación no tiene la intención de ser un consejo profesional ni pretende reemplazar una consulta personal con un médico, farmacéutico u otro profesional de la salud calificado. El lector no debe ignorar el consejo médico ni posponer la búsqueda de consejo médico debido a la información encontrada en esta aplicación.
             </p>
         </footer>
     </div>
@@ -626,8 +628,8 @@ Seu objeto JSON DEVE conter as seguintes chaves e estruturas, preenchendo-as com
             };
 
             try {
-                const apiKey = "AIzaSyBSwG0EMH7kvf7DLo4j280wb42uaWmp_ZA"; // API Key inserida diretamente
-                const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=${apiKey}`; // URL com a chave da API
+                const apiKey = ""; // API Key removida do código do cliente para segurança
+                const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=${apiKey}`; 
                 const payload = { contents: [{ role: "user", parts: [{ text: promptText }] }], generationConfig: { responseMimeType: "application/json", responseSchema: schema } };
                 const response = await fetch(apiUrl, { method: 'POST', headers: { 'Content-Type': 'application/json' }, body: JSON.stringify(payload) });
                 if (!response.ok) {
@@ -647,7 +649,7 @@ Seu objeto JSON DEVE conter as seguintes chaves e estruturas, preenchendo-as com
                 }
             } catch (error) {
                 console.error("Error al generar reporte:", error);
-                document.getElementById('error-content').textContent = error.message;
+                document.getElementById('error-content').textContent = "Por favor, adicione uma chave de API válida para gerar o relatório. A chave foi removida por razões de segurança. " + error.message;
                 showSection(errorMessage, true);
             } finally {
                 showSection(loadingSection, false);
@@ -658,7 +660,7 @@ Seu objeto JSON DEVE conter as seguintes chaves e estruturas, preenchendo-as com
             labForm.reset();
             showSection(reportOutput, false);
             showSection(printBtn, false);
-            showSection(whatsappShareBtn, false); // Ocultar botão de compartilhamento no WhatsApp
+            showSection(whatsappShareBtn, false);
             window.scrollTo(0, 0);
         });
         
@@ -787,10 +789,9 @@ Seu objeto JSON DEVE conter as seguintes chaves e estruturas, preenchendo-as com
 
             showSection(reportOutput, true);
             showSection(printBtn, true);
-            showSection(whatsappShareBtn, true); // Mostrar botão de compartilhamento no WhatsApp
+            showSection(whatsappShareBtn, true); 
             document.getElementById('report-output').scrollIntoView({ behavior: 'smooth' });
         }
     </script>
 </body>
 </html>
-
